# python-project-83

./: Makefile  README.md  build.sh  database.sql  pyproject.toml  setup.cfg
.github/workflows/: test_app.yml
page_analyzer/: app.py  db.py  page_content.py  verification.py
page_analyzer/templates/: base.html  page.html  urls.html
page_analyzer/templates/errors/: 404.html  500.html
tests/: test_app.py
