[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Web page analyzer for SEO acceptance"
authors = ["Nikita Grishin <mr_obey@mail.ru>"]
readme = "README.md"
packages = [{include = "hexlet-code"}]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Operating System :: Ubuntu",
    "License :: Freeware",
    "Natural Language :: English"
]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.3"
psycopg2-binary = "^2.9.7"
validators = "^0.21.2"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
gunicorn = "^20.1.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pytest = "7.1.3"
pytest-cov = "4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
